--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,43 @@
+/* Css Dashboard */
+.block-dashboard{
+	background-color: #16876b;
+}
+.block-dashboard2{
+	background-color: #56b4fe;
+}
+.block-dashboard3{
+	background-color: #333333;
+}
+.set{
+	border-radius: 4px;
+	height: 150px;
+	color:white;
+	margin-left:20px;
+	width: 335px;
+}
+.set>#number{
+	font-size:70px;
+	margin-top:23px;
+	margin-left:18px;
+}
+
+.te1>#txt{
+	font-size:30px;
+	margin:-100px 0 0 240px;
+
+}
+.te2>#txt{
+	font-size:30px;
+	margin:-80px 0 0 240px;
+
+}
+.te3>#txt{
+	font-size:30px;
+	margin:-100px 0 0 165px;
+
+}
+
+
 
 /*CSS NAV*/
 nav{
