--- a/css/main.css
+++ b/css/main.css
@@ -115,7 +115,7 @@ section::before,section::after {
     color:black;
 }
 .navbar-inverse .navbar-nav>li>a:hover,.navbar-inverse .navbar-nav>.active>a {
-    background:#ed0121;
+    background:#e0e0e0;
     color:white;
     text-shadow:none;
 }
